Added more convenient functionailty