@@ -1,6 +1,6 @@
 package org.example.projectplanningapp.repositories;
 
-
+import org.example.projectplanningapp.models.Status;
 import org.example.projectplanningapp.models.Task;
 import org.example.projectplanningapp.repositories.rowMappers.TaskRowMapper;
 import org.springframework.jdbc.core.JdbcTemplate;
@@ -9,10 +9,12 @@ import org.springframework.jdbc.support.KeyHolder;
 import org.springframework.stereotype.Repository;
 
 import java.sql.PreparedStatement;
-import java.util.*;
+import java.util.Collections;
+import java.util.List;
 
 @Repository
 public class TaskRepository {
+
     private final JdbcTemplate jdbc;
     private final TaskRowMapper taskRowMapper = new TaskRowMapper();
 
@@ -31,48 +33,61 @@ public class TaskRepository {
                             "VALUES (?,?,?,?,?,?,?,?)",
                     PreparedStatement.RETURN_GENERATED_KEYS);
 
-
             ps.setInt(1, task.getProjectId());
             ps.setObject(2, task.getParentTaskId() != null ? task.getParentTaskId() : null, java.sql.Types.INTEGER);
-            ps.setString(3, task.getTitle());
+            ps.setString(3, task.getTitle() != null ? task.getTitle() : "New Task");
             ps.setString(4, task.getDescription());
-            ps.setString(5, task.getStatus() != null ? task.getStatus().toString(): null);
-            ps.setObject(6, task.getEstimatedHours() != null ? task.getEstimatedHours() : null, java.sql.Types.INTEGER);
-            ps.setObject(7, task.getActualHours() != null ? task.getActualHours() : null, java.sql.Types.INTEGER);
+            ps.setString(5, task.getStatus() != null ? task.getStatus().name() : Status.TODO.name());
+            ps.setObject(6, task.getEstimatedHours(), java.sql.Types.INTEGER);
+            ps.setObject(7, task.getActualHours(), java.sql.Types.INTEGER);
             ps.setTimestamp(8, task.getDeadline() != null ? java.sql.Timestamp.valueOf(task.getDeadline()) : null);
 
             return ps;
         }, keyHolder);
 
-        // hent genereret taskId
-        Number id = keyHolder.getKey();
-        if (id != null) {
-            task.setTaskId(id.intValue());
+        Number taskId = keyHolder.getKey();
+        if (taskId != null) {
+            task.setTaskId(taskId.intValue());
         }
     }
 
-
-    public List<Task> getAllTasks(){
-        List <Task> tasks = jdbc.query("SELECT * FROM Task",taskRowMapper);
-        return tasks.isEmpty() ? Collections.emptyList() : tasks;
-    }
-
-    public Task getTaskFromId (int taskId){
+    public Task getTaskFromId(int taskId) {
         String sql = "SELECT * FROM Task WHERE taskId = ?";
-        List<Task> tasks = jdbc.query(sql,taskRowMapper,taskId);
-        return tasks.isEmpty() ? null : tasks.getFirst();
+        List<Task> tasks = jdbc.query(sql, taskRowMapper, taskId);
+        return tasks.isEmpty() ? null : tasks.get(0);
     }
 
-    public List<Task> getTasksInProject (int projectId){
+    public List<Task> getTasksInProject(int projectId) {
         String sql = "SELECT * FROM Task WHERE projectId = ?";
-        List<Task> tasks = jdbc.query(sql,taskRowMapper,projectId);
+        List<Task> tasks = jdbc.query(sql, taskRowMapper, projectId);
         return tasks.isEmpty() ? Collections.emptyList() : tasks;
     }
 
-    public List<Task> getAssignedTasksForEmployee (int employeeId) {
-        String sql = "SELECT * FROM Task WHERE employeeId = ?";
-        List<Task> list = jdbc.query(sql, taskRowMapper, employeeId);
-        return list.isEmpty() ? Collections.emptyList() : list;
+    public void updateTask(Task task) {
+        String sql = "UPDATE Task SET projectId=?, parentTaskId=?, title=?, description=?, " +
+                "status=?, estimatedHours=?, actualHours=?, deadline=? WHERE taskId=?";
+
+        jdbc.update(sql,
+                task.getProjectId(),
+                task.getParentTaskId(),
+                task.getTitle() != null ? task.getTitle() : "New Task",
+                task.getDescription(),
+                task.getStatus() != null ? task.getStatus().name() : Status.TODO.name(),
+                task.getEstimatedHours(),
+                task.getActualHours(),
+                task.getDeadline(),
+                task.getTaskId()
+        );
+    }
+
+    public void assignEmployeeToTask(int taskId, int employeeId) {
+        String sql = "INSERT INTO TaskEmployee (taskId, employeeId) VALUES (?, ?)";
+        jdbc.update(sql, taskId, employeeId);
+    }
+
+    public void removeAllAssignedEmployeesFromTask(int taskId) {
+        String sql = "DELETE FROM TaskEmployee WHERE taskId = ?";
+        jdbc.update(sql, taskId);
     }
 
     public List<Task> getSubTasks(int parentTaskId) {
@@ -81,38 +96,15 @@ public class TaskRepository {
         return tasks.isEmpty() ? Collections.emptyList() : tasks;
     }
 
-
-    public void updateTask(Task task) {
-        String sql = "UPDATE Task SET " +
-                "projectId = ?, " +
-                "parentTaskId = ?, " +
-                "title = ?, " +
-                "description = ?, " +
-                "status = ?, " +
-                "estimatedHours = ?, " +
-                "actualHours = ?, " +
-                "deadline = ? " +
-                "WHERE taskId = ?";
-
-        jdbc.update(sql,
-                task.getProjectId(),
-                task.getParentTaskId(),
-                task.getTitle(),
-                task.getDescription(),
-                task.getStatus(),
-                task.getEstimatedHours(),
-                task.getActualHours(),
-                task.getDeadline(),
-                task.getTaskId()
-        );
-    }
-
-
-    public void deleteTask (int taskId){
+    public void deleteTask(int taskId) {
         String sql = "DELETE FROM Task WHERE taskId = ?";
-        jdbc.update(sql,taskId);
+        jdbc.update(sql, taskId);
     }
 
-
+    public List<Task> getAssignedTasksForEmployee(int employeeId) {
+        String sql = "SELECT * FROM TaskEmployee WHERE employeeId = ?";
+        List<Task> tasks = jdbc.query(sql, taskRowMapper, employeeId);
+        return tasks.isEmpty() ? Collections.emptyList() : tasks;
+    }
 
 }
